# minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _CMakeLists.txt
cmake/: FindBGFX.cmake  bgfx.cmake  bx.cmake  glm.cmake  minecraft.cmake  shaderc.cmake  shared.cmake
cmake/tools/: shaderc.cmake  texturev.cmake
enc_temp_folder/654feb93dd62037e193b6e56bb580c9/: renderSystem.h
lib/bgfx/examples/05-instancing/: .instancing.cpp.swp
src/app/: CMakeLists.txt  block.cpp  block.h  cameraData.h  cellSystem.cpp  cellSystem.h  chunk.cpp  chunk.h  core.cpp  core.h  cullingSystem.cpp  cullingSystem.h  fs_bump.sc  fs_cubes.sc  logo.h  main.cpp  mapGenerator.cpp  mapGenerator.h  mesh.h  perlin.cpp  perlin.h  preRenderSystem.cpp  preRenderSystem.h  rayCast.cpp  rayCast.h  renderSystem.cpp  renderSystem.h  varying.def.sc  vs_bump.sc  vs_cubes.sc
src/app/runtime/textures/: 16x16_dirt.dds  dirt.dds  dirt.tga  skybox.dds
src/core/: CMakeLists.txt
src/core/hello/: hello.cpp  hello.h
src/test/: CMakeLists.txt  main.cpp
src/test/core/: test_hello.cpp
